--- a/Project.toml
+++ b/Project.toml
@@ -23,4 +23,4 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [targets]
-test = ["Test", "MadNLP", "NLPModelsIpopt", "LinearAlgebra", "JuMP", "Ipopt", "Random"]
+test = ["Test", "MadNLP", "NLPModelsIpopt", "JuMP", "Ipopt", "Random"]
