--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 
 [targets]
-test = ["Test", "MadNLP", "JuMP", "Random"]
+test = ["Test", "MadNLP", "JuMP", "Random", "CUDA"]
