--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,27 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
+  test-github:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         julia-version: ['1.7']
         julia-arch: [x64]
         os: [ubuntu-latest,macos-latest,windows-latest]
-
+    steps:
+      - uses: actions/checkout@v2
+      - uses: julia-actions/setup-julia@latest
+        with:
+          version: ${{ matrix.julia-version }}
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-runtest@latest 
+  test-moonshot:
+    env:
+      JULIA_DEPOT_PATH: /scratch/sshin/github-actions/julia_depot_dynamic_nlp_models
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        julia-version: ['1.7']
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
