--- a/Project.toml
+++ b/Project.toml
@@ -9,19 +9,21 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 QuadraticModels = "f468eda6-eac5-11e8-05a5-ff9e497bcd19"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 
 [compat]
 NLPModels = "0.18"
 QuadraticModels = "0.7.2"
 LinearOperators = "2.3.2"
 julia = "^1.6.0"
+CUDA = "3.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+
 
 [targets]
-test = ["Test", "MadNLP", "JuMP", "Random", "CUDA"]
+test = ["Test", "MadNLP", "JuMP", "Random"]
